--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       template: `  <div class="card stories">
               <div class="d-flex justify-content-start p-3">
                 <div
-                  v-for="story in this.stories"
+                  v-for="story in stories"
                   :key="story"
                   class="text-center avatar-story mx-1"
                 >
@@ -520,7 +520,7 @@
           sticky-top
         "
       >
-        <div class="container">
+        <div class="container flex-nowrap">
           <a class="navbar-brand" href="#"
             ><img
               src="https://www.instagram.com/static/images/web/mobile_nav_type_logo-2x.png/1b47f9d0e595.png"
@@ -528,8 +528,8 @@
               class="img-fluid"
           /></a>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <form class="d-flex ms-auto">
+          <div class="collapse show navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+            <form class="d-flex ms-auto d-none d-sm-block">
               <input
                 class="form-control me-2"
                 type="search"
@@ -537,7 +537,7 @@
                 aria-label="Search"
               />
             </form>
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 list-group-horizontal">
               <li class="nav-item mx-1">
                 <a class="nav-link" aria-current="page"
                   ><svg
