--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           class="col-md-4 d-none d-sm-block"
           style="position: fixed; margin-left: 630px; width: 350px"
         >
-          <div class="card bg-transparent border-0 p-3">
+          <div class="card bg-transparent d-none d-lg-block border-0 p-3">
             <div
               class="
                 card-header
