--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     rounded-5
                   "
                 >
-                  <small class="text-light"> CANLI</small>
+                  <small class="text-light fw-bold"> CANLI</small>
                 </span>
               </div>
             </div>
