update message badge

--- a/index.html
+++ b/index.html
@@ -610,9 +610,9 @@
                     ></path>
 
                   </svg>
-                  <small class="position-absolute p-1 top-40 start-80 translate-middle  badge bg-danger">
+                  <small  class="position-absolute  p-1 top-40 start-80 translate-middle notification  badge bg-danger">
                     3
-                <span class="visually-hidden">unread messages</span>
+                    <span class="visually-hidden">unread messages</span>
                     </small>
                 </a>
               </li>
