--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <!-- Vue JS CDN -->
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="mobile.css" />
   </head>
 
